k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readora
  namespace: readora
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # TLS not configured yet; keep HTTP to avoid redirecting to a non-working HTTPS endpoint.
spec:
  ingressClassName: nginx
  rules:
    - host: api.48-206-18-246.sslip.io # ingress's external IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
    - host: app.48-206-18-246.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-user
                port:
                  number: 80
    - host: admin.48-206-18-246.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-admin
                port:
                  number: 80
    - host: delivery.48-206-18-246.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-delivery-agent
                port:
                  number: 80
